--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,17 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3.3.2"
-actix-multipart = "0.3.0"
+log = "0.4.11"
+dotenv = "0.15.0"
+ffprobe = "0.1.0"
 futures = "0.3.8"
+tempfile = "3.2.0"
+actix-web = "3.3.2"
+imagesize = "0.8.8"
+env_logger = "0.7.1"
+tree_magic = "0.2.3"
+serde_json = "1.0.60"
+lazy_static = "1.4.0"
+actix-multipart = "0.3.0"
 sanitize-filename = "0.3.0"
+serde = { version = "1.0.118", features = ["derive"] }
