--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ edition = "2018"
 [dependencies]
 log = "0.4.11"
 nanoid = "0.3.0"
+mongodb = "1.1.1"
 dotenv = "0.15.0"
 ffprobe = "0.1.0"
 futures = "0.3.8"
 tempfile = "3.2.0"
+once_cell = "1.5.2"
 actix-web = "3.3.2"
 imagesize = "0.8.8"
 env_logger = "0.7.1"
