--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 log = "0.4.11"
+mime = "0.3.16"
 nanoid = "0.3.0"
 mongodb = "1.1.1"
 dotenv = "0.15.0"
@@ -21,6 +22,7 @@ env_logger = "0.7.1"
 tree_magic = "0.2.3"
 serde_json = "1.0.60"
 lazy_static = "1.4.0"
+actix-files = "0.5.0"
 actix-multipart = "0.3.0"
 sanitize-filename = "0.3.0"
 serde = { version = "1.0.118", features = ["derive"] }
