--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "autumn"
-version = "0.0.2"
+version = "0.0.3"
 authors = ["Paul Makles <paulmakles@gmail.com>"]
 edition = "2018"
 
@@ -18,6 +18,7 @@ tempfile = "3.2.0"
 once_cell = "1.5.2"
 actix-web = "3.3.2"
 imagesize = "0.8.8"
+actix-cors = "0.5.4"
 env_logger = "0.7.1"
 tree_magic = "0.2.3"
 serde_json = "1.0.60"
