--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ mongodb = "1.1.1"
 dotenv = "0.15.0"
 ffprobe = "0.1.0"
 futures = "0.3.8"
+rust-s3 = "0.26.4"
 tempfile = "3.2.0"
 once_cell = "1.5.2"
 actix-web = "3.3.2"
@@ -27,3 +28,4 @@ actix-files = "0.5.0"
 actix-multipart = "0.3.0"
 sanitize-filename = "0.3.0"
 serde = { version = "1.0.118", features = ["derive"] }
+tokio = { version = "1.4.0", features = ["io-util", "fs"] }
