--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 log = "0.4.11"
 toml = "0.5.8"
+webp = "0.1.3"
 mime = "0.3.16"
 nanoid = "0.3.0"
 image = "0.23.14"
