--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ rust-s3 = "0.26.4"
 tempfile = "3.2.0"
 once_cell = "1.5.2"
 actix-web = "3.3.2"
-imagesize = "0.8.8"
+imagesize = "0.9.0"
 actix-cors = "0.5.4"
 env_logger = "0.7.1"
 tree_magic = "0.2.3"
@@ -32,4 +32,4 @@ actix-multipart = "0.3.0"
 sanitize-filename = "0.3.0"
 content_inspector = "0.2.4"
 serde = { version = "1.0.118", features = ["derive"] }
-tokio = { version = "1.4.0", features = ["rt", "io-util", "fs"] }
+tokio = { version = "1.4.0", features = ["rt", "io-util", "fs", "time"] }
