--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,16 +20,17 @@ futures = "0.3.8"
 rust-s3 = "0.26.4"
 tempfile = "3.2.0"
 once_cell = "1.5.2"
-actix-web = "3.3.2"
 imagesize = "0.9.0"
-actix-cors = "0.5.4"
 env_logger = "0.7.1"
 tree_magic = "0.2.3"
 serde_json = "1.0.60"
 lazy_static = "1.4.0"
-actix-files = "0.5.0"
-actix-multipart = "0.3.0"
 sanitize-filename = "0.3.0"
 content_inspector = "0.2.4"
 serde = { version = "1.0.118", features = ["derive"] }
 tokio = { version = "1.4.0", features = ["rt", "io-util", "fs", "time"] }
+
+actix-web = "4.0.0-beta.9"
+actix-cors = "0.6.0-beta.2"
+actix-files = "0.6.0-beta.7"
+actix-multipart = "0.4.0-beta.6"
