--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "autumn"
-version = "1.1.8"
+version = "1.1.9"
 authors = ["Paul Makles <paulmakles@gmail.com>"]
 edition = "2018"
 
@@ -38,3 +38,6 @@ actix-web = "4.0.0-beta.9"
 actix-cors = "0.6.0-beta.2"
 actix-files = "0.6.0-beta.7"
 actix-multipart = "0.4.0-beta.6"
+
+# virus scanning
+revolt_clamav-client = { version = "0.1.5" }
