--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,9 @@ content_inspector = "0.2.4"
 serde = { version = "1.0.118", features = ["derive"] }
 tokio = { version = "1.4.0", features = ["rt", "io-util", "fs", "time"] }
 
-tokio-cron-scheduler = "*"
+
+tokio-cron-scheduler = "0.2.3"
+
 rust-s3 = "0.27.0-rc4"
 mongodb = "2.0.0"
 
@@ -38,6 +40,6 @@ actix-web = "4.0.0-beta.9"
 actix-cors = "0.6.0-beta.2"
 actix-files = "0.6.0-beta.7"
 actix-multipart = "0.4.0-beta.6"
-
 # virus scanning
 revolt_clamav-client = { version = "0.1.5" }
+
